@@ -33,4 +33,10 @@
     <string name="cheat_dialog_cancel">Cancel</string>
     <string name="cheat_dialog_ok">Run</string>
     <string name="cheat_dialog_title">Type command:</string>
+    <string name="launcher_gameSelect_clearList">Clear list</string>
+    <string name="launcher_gameSelect_pickTheDir">Select directory...</string>
+    <string name="launcher_gameselect_toast_selected">Switched the game: %s</string>
+    <string name="launcher_gameselect_toast_listclean">The list of games has been clean.</string>
+    <string name="launcher_gameselect_clearlist_title">Clear the games list</string>
+    <string name="launcher_gameselect_clearlist_question">Do you really want to clear the list of games?</string>
 </resources>
